welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: not found: value Direction
  setDirection(Direction.EST)
               ^DwarfCode:9: error: not found: value prendre
  prendre()
  ^DwarfCode:13: error: not found: value Direction
  setDirection(Direction.OUEST)
               ^